fix nav z-index

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -10,6 +10,7 @@
   transition-duration: .5s;
   transition-timing-function: ease;
   padding: 0 5px;
+  z-index: 5;
 
   &__list {
     list-style: none;
